kubernetes/media/wizarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media
  labels:
    app.kubernetes.io/name: wizarr
spec:
  ports:
    - name: http
      port: 5690
      targetPort: http
  selector:
    app.kubernetes.io/name: wizarr
